# WinJobster.py

./: .gitignore  Process.py  README.md  WinJobsterCallFailedException.py  WinJobsterLoader.py  pyproject.toml  requirements-dev.txt  requirements.txt  tests.py
.github/workflows/: publish.yml  test-package.yml
src/WinJobster/: Process.py  WinJobsterCallFailedException.py  WinJobsterLoader.py  __init__.py  _meta.py  exceptions.py  job.py  loader.py
src/libs/: get_dlls.py
