[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WinJobster"
authors = [
    {name = "MaxBQb"},
    {name = "SemperSolus0x3d"},
]
dynamic=["version"]
description = "My package description"
#readme = "README.md"
requires-python = ">=3.9"
keywords = ["one", "two"]
license = {text = "GPL-3.0 license"}
classifiers = [
    "Programming Language :: Python :: 3",
]
[tool.setuptools.package-data]
"*" = ["*.dll"]
[tool.setuptools.dynamic]
version = {attr = "WinJobster.__version__"}