[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WinJobster"
authors = [
    {name = "MaxBQb"},
    {name = "SemperSolus0x3d"},
]
dynamic=["version", "dependencies"]
description = "My package description"
#readme = "README.md"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "GPL-3.0 license"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
[tool.setuptools.package-data]
"*" = ["*.dll"]
[tool.setuptools.dynamic]
version = {attr = "WinJobster._meta.__version__"}
dependencies = {file = ["requirements.txt"]}