[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WinJobster"
authors = [
    {name = "MaxBQb"},
    {name = "SemperSolus0x3d"},
]
dynamic=["version", "dependencies"]
description = "WinJobster is a library, which can start processes in a Windows job, monitor their state (dead or alive) and kill them all at once, including their children, children of their children... you know where I'm going..."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["windows", "windows-jobs", "winapi", "process", "process-groups"]
license = {text = "GPL-3.0 license"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
]
[project.urls]
"Homepage" = "https://github.com/SemperSolus0x3d/WinJobster.py"
"Bug Tracker" = "https://github.com/SemperSolus0x3d/WinJobster.py/issues"
[tool.setuptools.package-data]
"*" = ["*.dll"]
[tool.setuptools.dynamic]
version = {attr = "WinJobster._meta.__version__"}
dependencies = {file = ["requirements.txt"]}